--- a/assets/css/viewport.css
+++ b/assets/css/viewport.css
@@ -1,4 +1,4 @@
-@media (min-width: 640px) {
+/* @media (min-width: 640px) {
     .shape,
     .animation-title
      {
@@ -15,4 +15,4 @@
     }
     
     
-}
+} */
