--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,22 @@
     --frank-orange: #FF7347;
 }
 
+@keyframes scale-light-bulb {
+    0% {
+        transform: scale(0);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: scale(3);
+        transform: rotate(360deg);
+    }
+}
+
+span.light-bulb{
+    animation: scale-light-bulb 3s;
+    
+}
 
 body {
     font-family: 'Karla', sans-serif;
@@ -88,6 +104,12 @@ a {
     display: inline-block;
     padding: 10px 20px 10px 20px; border-radius: 5px;
     transition: background-color 0.5s;
+}
+
+/*Check-out*/
+.output-check-out p{
+    display: inline-block;
+    padding: 10px 20px 10px 20px; border-radius: 5px;
 }
 
 
