--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,17 @@
     }
 }
 
+@keyframes fade-in-background {
+    0% {
+
+        background-image: transform: translate(0, 2000px);
+    }
+
+    100% {
+        transform: translate(0, 0px);
+    }
+}
+
 
 @keyframes fade-in {
     0% {
@@ -47,10 +58,6 @@
     }
 }
 
-span.light-bulb{
-    animation: scale-light-bulb 3s;
-    
-}
 
 body {
     font-family: 'Karla', sans-serif;
@@ -106,6 +113,10 @@ body {
 ol {
     list-style: decimal;
     margin-left: 23px;
+}
+
+.z-high{
+    z-index: 1000;
 }
 
 /*Typography*/
@@ -261,6 +272,39 @@ a {
   }
 
   .table-of-contents {
-    animation: fade-in-up 0.8s 0.5s both;
+    animation: fade-in-up 0.8s 0.5s both cubic-bezier(0.65,0.05,0.36,1);
   }
+
+.background-picture-hero {
+    animation: fade-in 0.8s 2s both cubic-bezier(0.65,0.05,0.36,1);
+    background-image: url(/assets/images/background.svg);
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    top: 0;
+    position: sticky;
+}
+
+@keyframes blob {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(0.7)
+    }
+}
+
+svg.splash {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    mix-blend-mode: multiply;
+}
+
+path {
+    transform: scale(0);
+    animation: blob 3s 0.6s both;
+}
 
