--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@
 @keyframes fade-in-background {
     0% {
 
-        background-image: transform: translate(0, 2000px);
+        transform: translate(0, 2000px);
     }
 
     100% {
@@ -181,6 +181,10 @@ a {
         display: flex;
         flex-direction: column-reverse;
     }
+
+    .display-none-small{
+        display: none;
+    }
   }
 
 
@@ -301,10 +305,12 @@ svg.splash {
     width: 100%;
     height: 100vh;
     mix-blend-mode: multiply;
+    pointer-events: none;
 }
 
-path {
+path.splash {
     transform: scale(0);
     animation: blob 3s 0.6s both;
 }
+
 
