--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ svg.splash {
     pointer-events: none;
 }
 
-path.splash {
+path {
     transform: scale(0);
     animation: blob 3s 0.6s both;
 }
